deploy/cluster-config/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  # For e2b-system deployment
  name: e2b-system
  labels:
    gateway-access: sandbox-gateway
---
apiVersion: v1
kind: Namespace
metadata:
  # For sandbox deployment
  name: sandbox
  labels:
    gateway-access: sandbox-gateway
