deploy/cluster-config/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sandbox-gateway
  namespace: e2b-system
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      hostname: "*.auenkr.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All # Can add only from a particular namespace where all pods will be deployed
    # - name: https
    #   hostname: "*.auenkr.com"
    #   port: 443
    #   protocol: HTTPS
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: auenkr-com-tls
    #   allowedRoutes:
    #     namespaces:
    #       from: All
